# python-package-exercise-project-3-team-6

./: .gitignore  Pipfile  README.md  pyproject.toml
.github/workflows/: tests.yml
src/RockPaperScissorsFullGame/: ML.py  RPS.py  __main__.py
tests/: test_main.py  test_rps.py  test_rps2.py
