[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "RockPaperScissorsFullGame"
description = "A Rock Paper Scissor Game"
version = "0.0.1"
authors = [
  { name="Team 6"},
]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["game", "rock", "paper", "scissor", "RockPaperScissors"]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/software-students-fall2022/python-package-exercise-project-3-team-8"
"Repository" = "https://github.com/software-students-fall2022/python-package-exercise-project-3-team-8.git"
"Bug Tracker" = "https://github.com/software-students-fall2022/python-package-exercise-project-3-team-8/issues"

[project.scripts]
RPS = "RPS.__main__:main"