[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = [
    ".", "src",
]

[project]
name = "RockPaperScissorsFullGame"
description = "A Rock Paper Scissor Game"
version = "0.0.1"
authors = [
  { name="Team 6"},
]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["game", "rock", "paper", "scissor", "RockPaperScissors"]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/software-students-fall2022/python-package-exercise-project-3-team-8"
"Repository" = "https://github.com/software-students-fall2022/python-package-exercise-project-3-team-8.git"
"Bug Tracker" = "https://github.com/software-students-fall2022/python-package-exercise-project-3-team-8/issues"

[project.scripts]
RPS = "RPS.__main__:main"

[pypi]
username = RPS-token
password = pypi-AgEIcHlwaS5vcmcCJGZkYzVmMjUyLTMwYjQtNDE3My1iYzE5LTNiOTEzY2ExZmU3NAACIVsxLFsicm9ja3BhcGVyc2Npc3NvcnNmdWxsZ2FtZSJdXQACLFsyLFsiY2ZkYjgyNGEtZmU4ZS00ZmIyLThmZTItZDA4NGY5NmVkMDYzIl1dAAAGIGoHEaiHCeo7F1__d_xALydk3c6bX3yVWtPuoFLDWV2k